Update page link

--- a/package.json
+++ b/package.json
@@ -43,5 +43,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://amsierco.github.io/shopping-cart"
+  "homepage": "https://amsierco.github.io/"
 }
